# lhre-2026

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  readme.md
.gemini/: styleguide.md
.github/workflows/: postsubmit.yml  presubmit.yml  release.yml
BEVO/: README.md
BEVO/dashd/: package-lock.json  package.json
HDV/firmware/: BUILD.bazel
HDV/firmware/Core/Src/: main.c  tim.c
VCU/: README.md
VCU/firmware/: .gitignore  .mxproject  BUILD  BUILD.bazel  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  vcu-firmware-2026.ioc  vcu-firmware.ioc
VCU/firmware/Core/Inc/: FreeRTOSConfig.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
VCU/firmware/Core/Src/: adc.c  app_freertos.c  fdcan.c  gpio.c  main.c  stm32g4xx_it.c
VCU/firmware/cmake/: gcc-arm-none-eabi.cmake
VCU/firmware/cmake/stm32cubemx/: CMakeLists.txt
drivers/: README.md
drivers/longhorn-lib/: BUILD
drivers/stm32g4/: BUILD
drivers/stm32g4/USB_Device/App/: usbd_desc.c
tests/: BUILD
toolchain/: BUILD  stm32g474vetx_flash.ld
tools/dfu/: dfu.bzl
tools/openocd/: BUILD  README.md  flash.py  flash.sh  openocd.bzl  stm32g4.cfg
tools/outputs/: build_outputs.bzl
