"""MODULE.bazel for lhre-2026: Bazel module configuration and toolchain setup."""

module(name = "lhre-2026")

bazel_dep(name = "toolchains_arm_gnu", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_eabi(version = "13.2.1")
use_repo(arm_toolchain, "arm_none_eabi")
# register_toolchains("@arm_none_eabi//toolchain:all")
register_toolchains("//toolchain:all")
