load("//:tools/outputs/build_outputs.bzl", "binary_out", "hex_out", "firmware_project")

firmware_project(
    name = "vcu_firmware_2026",
    linker_script = "//toolchain:stm32g474vetx_flash_script",
    startup_script = "//toolchain:stm32g474_startup",
    defines = [
        "DEBUG",
        "USE_HAL_DRIVER",
        "STM32G474xx",
    ],
    extra_srcs = [
        "//drivers/stm32g4:freertos_srcs",
    ],

    extra_deps = [
        "//drivers/stm32g4:freertos_headers",
    ]
)

binary_out(
    name = "vcu_firmware_bin",
    src = ":vcu_firmware_2026"
)

hex_out(
    name = "vcu_firmware_hex",
    src = ":vcu_firmware_2026"
)
