load("//:tools/outputs/build_outputs.bzl", "firmware_project_g4")

firmware_project_g4(
    name = "vcu_firmware_2026",
    linker_script = "//toolchain:stm32g474vetx_flash_script",
    startup_script = "//toolchain:stm32g474_startup",
    defines = [
        "STM32G474xx",
    ],
    enable_freertos = True,
    enable_usb = True,
    usb_device_name = "Vehicle Control Unit"
)
