load("//:tools/outputs/build_outputs.bzl", "firmware_project_g4")

firmware_project_g4(
    name = "vcu_firmware_2026",
    linker_script = "stm32g474vetx_flash.ld",
    startup_script = "startup_stm32g474xx.s",
    defines = [
        "STM32G474xx",
    ],
    enable_freertos = True,
    enable_usb = True,
    usb_device_name = "Vehicle Control Unit",
)
